# tm

./: Cargo.toml  README.md  flake.nix
src/: db.rs  ipc.rs  lib.rs  main.rs
tm-daemon/: Cargo.toml
tm-daemon/src/: main.rs  menubar.rs  socket.rs  state.rs  timer.rs
