[package]
name = "tm-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tm = { path = ".." }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSButton",
    "NSMenu",
    "NSMenuItem",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSTimer",
    "NSRunLoop",
    "NSThread",
] }
block2 = "0.5"
